test/compile_errors/err_scope_spawn_requires_scope.w
//! expect-check-fail: spawn() is only available inside scope

fn main:
    let handle = s.spawn(() => 1)
    let _ = handle.join()
